syntax="proto3";
package Services;
import "User.proto";

message RegReponse{
    string status=1;
    string message=2;
}

service UserService{
    rpc UserReg(UserModel) returns (RegReponse);
}